<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/title_question_1"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/dinner_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculate"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:elevation="10dp"
            android:text="@string/button_text"
            android:textColor="@color/white"
            app:elevation="10dp"
            app:strokeColor="@color/design_default_color_on_primary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/red">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/results"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/result_one" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/result1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/result_two" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:enabled="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/result_three" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/result3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:enabled="false" />

    </LinearLayout>


</LinearLayout>